--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="itens">Localização</li>
             <li class="itens">Profissionais Qualificados</li>
         </ul>
-        <img src="" alt="">
+        <img src="img/beneficios.jpg" alt="barbeando" class="imagemBeneficios">
     </div>
 </body>
 
