--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="tituloPrincipal">Barbearia Alura</h1>
+    </header>
     <img id="banner" src="img/banner.jpg" />
     <div class="principal">
-        <h1>Sobre a Barbearia Alura</h1>
+        <h2 class="tituloCentralizado">Sobre a Barbearia Alura</h2>
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o
             mercado o que há de melhor para o
             seu
@@ -28,8 +31,7 @@
             agilidade, garantindo qualidade e satisfação aos nossos clientes.</p>
     </div>
     <div class="beneficios">
-        <h2>Benefícios</h2>
-
+        <h3 class="tituloCentralizado">Benefícios</h3>
         <ul>
             <li class="itens">Atendimento aos clientes</li>
             <li class="itens">Espaço diferenciado</li>
