--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="tituloPrincipal">Barbearia Alura</h1>
     </header>
-    <img id="banner" src="img/banner.jpg" />
+    <img id="banner" src="img/principal/banner.jpg" />
     <div class="principal">
         <h2 class="tituloCentralizado">Sobre a Barbearia Alura</h2>
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o
@@ -38,7 +38,7 @@
             <li class="itens">Localização</li>
             <li class="itens">Profissionais Qualificados</li>
         </ul>
-        <img src="img/beneficios.jpg" alt="barbeando" class="imagemBeneficios">
+        <img src="img/principal/beneficios.jpg" alt="barbeando" class="imagemBeneficios">
     </div>
 </body>
 
