--- a/produtos.html
+++ b/produtos.html
@@ -8,6 +8,19 @@
 </head>
 
 <body>
+    <header>
+        <h1><img src="img/produtos/logo.png"></h1>
+
+        <nav>
+            <ul>
+
+
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
 </body>
