--- a/produtos.html
+++ b/produtos.html
@@ -22,8 +22,13 @@
             </nav>
         </div>
     </header>
-
-
+    <main>
+        <ul>
+            <li>cabelo</li>
+            <li>barba</li>
+            <li>cabelo+barba</li>
+        </ul>
+    </main>
 </body>
 
 </html>
