--- a/produtos.html
+++ b/produtos.html
@@ -44,6 +44,10 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="img/produtos/logo-branco.png" alt="logo-rodape">
+        <p class="copyright">&copy; Copyright Barbearia-Alura - 2021</p>
+    </footer>
 </body>
 
 </html>
