--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/produtos.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
