--- a/contato.html
+++ b/contato.html
@@ -25,31 +25,30 @@
     <main>
         <form action="">
             <label for="nomesobrenome">Nome e sobrenome</label>
-            <input type="text" id="nomesobrenome">
+            <input type="text" id="nomesobrenome" class="input-padrao">
 
             <label for="email">E-mail</label>
-            <input type="text" id="email">
+            <input type="text" id="email" class="input-padrao">
 
             <label for="telefone">Telefone</label>
-            <input type="text" id="telefone">
+            <input type="text" id="telefone" class="input-padrao">
 
             <label for="mensagem">Mensagem</label>
-            <textarea cols="70" rows="10" id="mensagem"></textarea>
+            <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
 
             <div>
                 <p>Como prefere o nosso contato?</p>
-                <label for="radio-email">E-mail</label>
-                <input type="radio" name="contato" value="email" id="radio-email">
+                <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">
+                    E-mail</label>
 
+                <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">
+                    Telefone</label>
 
-                <label for="radio-telefone">Telefone</label>
-                <input type="radio" name="contato" value="telefone" id="radio-telefone">
-
-                <label for="radio-whatsapp">Whatsapp</label>
-                <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                    Whatsapp</label>
             </div>
 
-            <label><input type="checkbox"> Gostaria de receber nossas novidades por e-mail?</label>
+            <label><input type="checkbox" class="checkbox"> Gostaria de receber nossas novidades por e-mail?</label>
             <input type="submit" value="Enviar formulário">
         </form>
     </main>
