--- a/contato.html
+++ b/contato.html
@@ -48,6 +48,15 @@
                     Whatsapp</label>
             </div>
 
+            <div>
+                <p>Qual horário prefere ser atendido?</p>
+                <select>
+                    <option value="">Manhã</option>
+                    <option value="">Tarde</option>
+                    <option value="">Noite</option>
+                </select>
+            </div>
+
             <label><input type="checkbox" class="checkbox"> Gostaria de receber nossas novidades por e-mail?</label>
             <input type="submit" value="Enviar formulário">
         </form>
