--- a/index.html
+++ b/index.html
@@ -4,42 +4,59 @@
 <head>
     <meta charset="utf-8">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="css/style-home.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="tituloPrincipal">Barbearia Alura</h1>
+        <div class="caixa">
+            <h1><img src="img/produtos/logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <img id="banner" src="img/principal/banner.jpg" />
-    <div class="principal">
-        <h2 class="tituloCentralizado">Sobre a Barbearia Alura</h2>
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o
-            mercado o que há de melhor para o
-            seu
-            cabelo e
-            barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
-            clientes a cada dia.</p>
+    <img class="banner" src="img/principal/banner.jpg" />
+    <main>
+        <section class="principal">
+            <h2 class="tituloPrincipal">Sobre a Barbearia Alura</h2>
+            <img class="utensilios" src="img/principal/utensilios.jpg" alt="Utensilios de um barbeiro">
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o
+                mercado o que há de melhor para o
+                seu
+                cabelo e
+                barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+                clientes a cada dia.</p>
 
-        <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de
-                    vida aos
-                    clientes"</strong>.</em></p>
+            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de
+                        vida aos
+                        clientes"</strong>.</em></p>
 
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
-            atendimento
-            possui padrão de excelência e
-            agilidade, garantindo qualidade e satisfação aos nossos clientes.</p>
-    </div>
-    <div class="beneficios">
-        <h3 class="tituloCentralizado">Benefícios</h3>
-        <ul>
-            <li class="itens">Atendimento aos clientes</li>
-            <li class="itens">Espaço diferenciado</li>
-            <li class="itens">Localização</li>
-            <li class="itens">Profissionais Qualificados</li>
-        </ul>
-        <img src="img/principal/beneficios.jpg" alt="barbeando" class="imagemBeneficios">
-    </div>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
+                atendimento
+                possui padrão de excelência e
+                agilidade, garantindo qualidade e satisfação aos nossos clientes.</p>
+        </section>
+        <section class="beneficios">
+            <h3 class="tituloPrincipal">Benefícios</h3>
+            <ul>
+                <li class="itens">Atendimento aos clientes</li>
+                <li class="itens">Espaço diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais Qualificados</li>
+            </ul>
+            <img src="img/principal/beneficios.jpg" alt="barbeando" class="imagemBeneficios">
+        </section>
+    </main>
+    <footer>
+        <img src="img/produtos/logo-branco.png" alt="logo-rodape">
+        <p class="copyright">&copy; Copyright Barbearia-Alura - 2021</p>
+    </footer>
 </body>
 
 </html>
